--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
 
 <body>
 	<div id='body'>
-        Game ID/Nickname: <input type='text' id='nickname' name='nickname' value="placeholder">
+<!--         Game ID/Nickname: <input type='text' id='nickname' name='nickname' value="placeholder">
         Server ip: <input type='text' id='ip' name='ip' value="127.0.0.1">
-        Server port: <input type='text' id='port' name='port' value="8080">
-<!--         Game ID/Nickname: <input type='text' id='nickname' name='nickname'>
+        Server port: <input type='text' id='port' name='port' value="8080"> -->
+        Game ID/Nickname: <input type='text' id='nickname' name='nickname'>
         Server ip: <input type='text' id='ip' name='ip'>
         Server port: <input type='text' id='port' name='port'> 
- -->        <button type="button" id='cntBtn' onclick="connect();">Connect</button>
+        <button type="button" id='cntBtn' onclick="connect();">Connect</button>
         <button type="button" id='cntBtn' onclick="disconnect();">Disconnect</button>
 		<canvas id="canvas"></canvas>
+        <p>Latency is: <span id="latency">not yet calculated.</span><p>
 	</div>
 </body>
 
